add blocker for fptls.com (#1)
* feat: add blocker for fptls.com

* fix

* fixes

---------

Co-authored-by: Valentyn Yefimov <valentine.efimov@gmail.com>

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,18 @@
 {
   "manifest_version": 3,
-  "name": "FPjs-Blocker",
+  "name": "FPJS-Blocker",
   "version": "1.0.0",
-  "action": { "default_popup": "index.html" }
+  "permissions": ["declarativeNetRequest", "declarativeNetRequestFeedback"],
+  "action": {
+    "default_popup": "index.html"
+  },
+  "declarative_net_request": {
+    "rule_resources": [
+      {
+        "id": "block_fpjs",
+        "enabled": false,
+        "path": "block_fpjs_rule.json"
+      }
+    ]
+  }
 }
